scripts/nullaway/annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8.txt
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/component/ActionListBox.java:75: error: [NullAway] dereferenced expression ((Item)getSelectedItem()) is @Nullable
            ((Item)getSelectedItem()).doAction();
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/component/TextArea.java:59: error: [NullAway] initializer method does not guarantee @NonNull field lastSize (line 44) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TextArea(TerminalSize preferredSize, String text) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/component/TextArea.java:69: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.lastSize = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/dialog/WaitingDialog.java:61: error: [NullAway] dereferenced expression getOwner() is @Nullable
        getOwner().runInEventThread(new Action() {
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/layout/LinearLayout.java:117: error: [NullAway] dereferenced expression layoutParameterMap.get(lloc.component) is @Nullable
            if(layoutParameterMap.get(lloc.component).contains(getMinorMaximizesParameter()) ||
                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/layout/LinearLayout.java:123: error: [NullAway] passing @Nullable parameter 'preferredSizeMap.get(lloc.component)' where @NonNull is required
                int preferred = getMinorAxis(preferredSizeMap.get(lloc.component));
                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/layout/LinearLayout.java:132: error: [NullAway] passing @Nullable parameter 'preferredSizeMap.get(lloc.component)' where @NonNull is required
                int preferred = getMajorAxis(preferredSizeMap.get(lloc.component));
                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/gui/layout/LinearLayout.java:146: error: [NullAway] dereferenced expression layoutParameterMap.get(lloc.component) is @Nullable
            if(layoutParameterMap.get(lloc.component).contains(getMajorMaximizesParameter()) ||
                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/terminal/swing/SwingTerminal.java:299: error: [NullAway] dereferenced expression terminalFrame is @Nullable
                    terminalFrame.pack();
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/terminal/AbstractTerminal.java:78: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return lastKnownSize;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/terminal/text/CygwinTerminal.java:94: error: [NullAway] dereferenced expression resizeCheckTimer is @Nullable
        resizeCheckTimer.cancel();
                        ^
    (see http://t.uber.com/nullaway )
../annotator/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/test/terminal/TerminalResizeTest.java:63: error: [NullAway] dereferenced expression terminal is @Nullable
        terminal.moveCursor(0, 0);
                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
